--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "private": true,
   "dependencies": {
     "@emotion/core": "^10.0.27",
+    "@fullcalendar/core": "^4.3.1",
+    "@fullcalendar/daygrid": "^4.3.0",
+    "@fullcalendar/interaction": "^4.3.0",
+    "@fullcalendar/react": "^4.3.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
-    "date-fns": "^2.8.1",
     "react": "^16.12.0",
     "react-datepicker": "^2.10.1",
     "react-dom": "^16.12.0",
     "react-dropdown-select": "^3.8.1",
     "react-minimal-pie-chart": "^6.0.1",
-    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
   "scripts": {
